--- a/contact.html
+++ b/contact.html
@@ -137,34 +137,38 @@
                     tabindex="0"></iframe>
                 </div>
                 <div class="col-lg-6 wow fadeInUp" data-wow-delay="0.1s">
-                    <form >
+                    <form id="contactForm">
                         <div class="row g-3">
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="name" placeholder="Your Name">
-                                    <label for="name" style="text-align: right;">Your Name</label>
+                                    <label for="name" style="right: 0 ;">اسمك</label>
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="form-floating">
                                     <input type="email" class="form-control" id="email" placeholder="Your Email">
-                                    <label for="email">Your Email</label>
+                                    <label for="email" style="right: 0 ;">الايميل</label>
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <input type="text" class="form-control" id="subject" placeholder="Subject">
-                                    <label for="subject">Subject</label>
+                                    <label for="subject" style="right: 0 ;">الموضوع</label>
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                             <div class="col-12">
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a message here" id="message" style="height: 200px"></textarea>
-                                    <label for="message">Message</label>
+                                    <label for="message" style="right: 0 ;">الرسالة</label>
+                                    <div class="error-message"></div>
                                 </div>
                             </div>
                             <div class="col-12">
-                                <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">Send Message</button>
+                                <button class="btn btn-primary rounded-pill py-3 px-5" type="submit">ارسال الرسالة</button>
                             </div>
                         </div>
                     </form>
@@ -246,6 +250,9 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+
+    <!-- Validation Javascript -->
+    <script src="js/validation.js"></script>
 </body>
 
 </html>
